--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 	],
 	"require": {
 		"php": "^8.2",
-		"filament/filament": "^4.0",
+		"filament/filament": "^4.0|^5.0",
 		"illuminate/contracts": "^10.0|^11.0|^12.0"
 	},
 	"require-dev": {
